--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -59,6 +59,13 @@
             "request": "launch",
             "program": "${file}",
             "console": "externalTerminal"
+        },
+        {
+            "name": "Python: Debug Console",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "console": "none"
         }
     ]
 }
